// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests homepage Does not render car list if it is empty 1`] = `
<div>
  <header>
    <div
      class="MuiContainer-root sc-AxjAm sc-AxheI kTVrpe MuiContainer-maxWidthLg"
    >
      <div
        class="MuiGrid-root sc-AxiKw bBNIh MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <h1
            class="MuiTypography-root sc-AxhUy gpIutg MuiTypography-h1"
          >
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb sc-AxgMl kETrBh active"
              href="/"
            >
              Car Sales
            </a>
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-xs-flex-end"
          >
            <a
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet"
              href="/car/fav"
            >
              Favorites
            </a>
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet active"
              href="/"
            >
              My orders
            </a>
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet active"
              href="/"
            >
              Sell
            </a>
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    class="MuiContainer-root sc-AxjAm fuGogJ MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root sc-fzoLag dhfqaO MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <div
          class="MuiContainer-root sc-fzpans cpmRwg MuiContainer-maxWidthLg"
        >
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
            >
              Manufacturers
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="manufacturers"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
            >
              Colors
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="colors"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Sort
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                Mileage - Ascending
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="sort"
                tabindex="-1"
                value="asc"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-fzoLsD jtNKkn MuiButton-containedPrimary"
            data-testid="filter"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Filter
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
      />
    </div>
  </div>
  <footer
    class="sc-Axmtr jAtLrE"
  >
    ©    ¯\\_(ツ)_/¯    2020
  </footer>
</div>
`;

exports[`Tests homepage Renders homepage and waits for all the elements 1`] = `
<div>
  <header>
    <div
      class="MuiContainer-root sc-AxjAm sc-AxheI kTVrpe MuiContainer-maxWidthLg"
    >
      <div
        class="MuiGrid-root sc-AxiKw bBNIh MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <h1
            class="MuiTypography-root sc-AxhUy gpIutg MuiTypography-h1"
          >
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb sc-AxgMl kETrBh active"
              href="/"
            >
              Car Sales
            </a>
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-xs-flex-end"
          >
            <a
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet"
              href="/car/fav"
            >
              Favorites
            </a>
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet active"
              href="/"
            >
              My orders
            </a>
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet active"
              href="/"
            >
              Sell
            </a>
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    class="MuiContainer-root sc-AxjAm fuGogJ MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root sc-fzoLag dhfqaO MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <div
          class="MuiContainer-root sc-fzpans cpmRwg MuiContainer-maxWidthLg"
        >
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
            >
              Manufacturers
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="manufacturers"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
            >
              Colors
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="colors"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Sort
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                Mileage - Ascending
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="sort"
                tabindex="-1"
                value="asc"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-fzoLsD jtNKkn MuiButton-containedPrimary"
            data-testid="filter"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Filter
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
        >
          Available cars
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
        >
          Showing 7 of 7
        </h6>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="R8"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                R8
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 80765
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 176,817 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-80765"
                    href="/car/80765"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="S5"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                S5
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 84975
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 156,598 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-84975"
                    href="/car/84975"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="A6 Allroad"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                A6 Allroad
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 34207
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 155,503 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-34207"
                    href="/car/34207"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="R8"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                R8
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 21741
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 153,663 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-21741"
                    href="/car/21741"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="A2"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                A2
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 92734
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 150,467 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-92734"
                    href="/car/92734"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="RS 4"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                RS 4
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 58470
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 135,073 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-58470"
                    href="/car/58470"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="A8"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                A8
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 76275
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 115,779 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-76275"
                    href="/car/76275"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <nav
          aria-label="pagination navigation"
          class="MuiPagination-root"
        >
          <ul
            class="MuiPagination-ul"
          >
            <li>
              <button
                aria-label="Go to previous page"
                class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiPaginationItem-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
              </button>
            </li>
            <li>
              <button
                aria-current="true"
                aria-label="page 1"
                class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
                tabindex="0"
                type="button"
              >
                1
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li>
              <button
                aria-label="Go to next page"
                class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiPaginationItem-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <footer
    class="sc-Axmtr jAtLrE"
  >
    ©    ¯\\_(ツ)_/¯    2020
  </footer>
</div>
`;

exports[`Tests homepage Renders the page and changes the filter values 1`] = `
<div>
  <header>
    <div
      class="MuiContainer-root sc-AxjAm sc-AxheI kTVrpe MuiContainer-maxWidthLg"
    >
      <div
        class="MuiGrid-root sc-AxiKw bBNIh MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <h1
            class="MuiTypography-root sc-AxhUy gpIutg MuiTypography-h1"
          >
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb sc-AxgMl kETrBh active"
              href="/"
            >
              Car Sales
            </a>
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-xs-flex-end"
          >
            <a
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet"
              href="/car/fav"
            >
              Favorites
            </a>
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet active"
              href="/"
            >
              My orders
            </a>
            <a
              aria-current="page"
              class="sc-AxirZ iLjBBz sc-AxhCb clXXet active"
              href="/"
            >
              Sell
            </a>
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    class="MuiContainer-root sc-AxjAm fuGogJ MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root sc-fzoLag dhfqaO MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <div
          class="MuiContainer-root sc-fzpans cpmRwg MuiContainer-maxWidthLg"
        >
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Manufacturers
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                BMW
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="manufacturers"
                tabindex="-1"
                value="BMW"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Colors
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                white
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="colors"
                tabindex="-1"
                value="white"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiFormControl-root sc-fzozJi fVKENf"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Sort
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                role="button"
                tabindex="0"
              >
                Mileage - Ascending
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                data-testid="sort"
                tabindex="-1"
                value="asc"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-fzoLsD jtNKkn MuiButton-containedPrimary"
            data-testid="filter"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Filter
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
        >
          Available cars
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
        >
          Showing 10 of 19
        </h6>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="Z1"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                Z1
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 66926
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 188,218 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-66926"
                    href="/car/66926"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="i3"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                i3
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 65365
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 186,866 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-65365"
                    href="/car/65365"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="Z8"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                Z8
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 84782
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 186,133 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-84782"
                    href="/car/84782"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="X4"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                X4
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 69777
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 183,298 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-69777"
                    href="/car/69777"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="4er"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                4er
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 92599
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 178,989 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-92599"
                    href="/car/92599"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="X3"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                X3
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 86941
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 167,572 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-86941"
                    href="/car/86941"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="X5"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                X5
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 35922
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 166,335 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-35922"
                    href="/car/35922"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="i8"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                i8
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 30029
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 156,470 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-30029"
                    href="/car/30029"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="1er"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                1er
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 28283
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 156,260 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Diesel - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-28283"
                    href="/car/28283"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiCard-root sc-fzoyAV bsGOzn MuiPaper-elevation0 MuiPaper-rounded"
        >
          <div
            class="MuiCardContent-root sc-fznZeY rYoAy"
          >
            <img
              alt="X3"
              class="sc-fzqNJr jBRCUH"
              src="https://auto1-js-task-api--mufasa71.repl.co/images/car.svg"
            />
            <div
              class="MuiCardContent-root sc-fzokOt gJacyf"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
              >
                X3
              </h6>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom MuiTypography-displayBlock"
              >
                Stock # 85612
                <span
                  class="sc-fzplWN beffhE"
                >
                   - 153,007 km
                </span>
                <span
                  class="sc-fznyAO looylO"
                >
                   - Petrol - white
                </span>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing"
                >
                  <a
                    class="sc-AxirZ iLjBBz sc-fznKkj bkajBi"
                    data-testid="car-85612"
                    href="/car/85612"
                  >
                    View details
                  </a>
                </div>
              </span>
            </div>
          </div>
        </div>
        <nav
          aria-label="pagination navigation"
          class="MuiPagination-root"
        >
          <ul
            class="MuiPagination-ul"
          >
            <li>
              <button
                aria-label="Go to previous page"
                class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiPaginationItem-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
              </button>
            </li>
            <li>
              <button
                aria-current="true"
                aria-label="page 1"
                class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
                tabindex="0"
                type="button"
              >
                1
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li>
              <button
                aria-label="Go to page 2"
                class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
                tabindex="0"
                type="button"
              >
                2
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li>
              <button
                aria-label="Go to next page"
                class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiPaginationItem-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <footer
    class="sc-Axmtr jAtLrE"
  >
    ©    ¯\\_(ツ)_/¯    2020
  </footer>
</div>
`;
